# sme

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  imgui.ini
SME/: CMakeLists.txt
SME/assets/shaders/: FlatColor.glsl  Texture.glsl
SME/src/: EditorLayer.cpp  EditorLayer.h  SMEApp.cpp
Sarene/: CMakeLists.txt
Sarene/src/: Sarene.h  sarpch.cpp  sarpch.h
Sarene/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Sarene/src/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Sarene/src/Sarene/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.h  LayerStack.cpp  Log.cpp  Log.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
Sarene/src/Sarene/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Input.cpp  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseButtonCodes.h  MouseCodes.h  Timestep.h  Window.cpp  Window.h
Sarene/src/Sarene/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Sarene/src/Sarene/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Sarene/src/Sarene/Renderer/: Buffer.cpp  Buffer.h  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/: main.cpp
